# Fileosophy

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: user-guide.html
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  files.rs  folder_scan.rs  folder_share.rs  gantt.rs  kanban.rs  milestones.rs  mod.rs  notifications.rs  projects.rs  search.rs  settings.rs  status_history.rs  system.rs  user.rs  utils.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  models.rs
src-tauri/src/events/: mod.rs
src-tauri/src/mdns/: mod.rs
src-tauri/src/sharing/: mod.rs
src/components/: Layout.tsx
src/components/common/: DatePicker.tsx  Dropdown.tsx  EmptyState.tsx  ErrorBoundary.tsx  GlobalSearch.tsx  JoinShareDialog.tsx  Modal.tsx  OnboardingOverlay.tsx  QuickAddPanel.tsx  ShareProjectDialog.tsx  Spinner.tsx
src/components/files/: FileExplorer.tsx  FilePanel.tsx  FilePreviewModal.tsx
src/components/gantt/: GanttChart.tsx  GanttTooltip.tsx  MilestoneModal.tsx  StatusHistoryModal.tsx
src/components/kanban/: KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx
src/components/notifications/: NotificationCenter.tsx  ToastContainer.tsx
src/components/project/: BatchStatusDropdown.tsx  InCellStatusDropdown.tsx  ProjectDialog.tsx  (+1 more)
src/lib/: formatUtils.ts  ganttUtils.ts  tauri-api.ts
src/pages/: DashboardPage.tsx  GanttPage.tsx  ProjectDetailPage.tsx  ProjectListPage.tsx  SettingsPage.tsx  SharingPage.tsx
src/stores/: useGanttStore.ts  useKanbanStore.ts  useNotificationStore.ts  useProjectStore.ts  useSettingsStore.ts  useShareStore.ts  useUserStore.ts
src/types/: index.ts
(+17 files in other folders)
