[package]
name = "fileosophy"
version = "1.0.0"
description = "Fileosophy - Desktop Project Management"
edition = "2021"

[lib]
name = "fileosophy_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
mdns-sd = "0.12"
log = "0.4"
env_logger = "0.11"
local-ip-address = "0.6"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
tauri-plugin-fs = "2.5.1"
socket2 = { version = "0.5", features = ["all"] }
sha2 = "0.10"
rand = "0.8"
image = "0.25"
